@@ -892,6 +892,11 @@ int Window::installTimeout(const UString &handler, int t, bool singleShot)
   return winq->installTimeout(handler, t, singleShot);
 }
 
+int Window::installTimeout(const Value &function, List &args, int t, bool singleShot)
+{
+  return winq->installTimeout(function, args, t, singleShot);
+}
+
 void Window::clearTimeout(int timerId)
 {
   winq->clearTimeout(timerId);
@@ -1399,13 +1404,12 @@ Value WindowFunc::tryCall(ExecState *exec, Object &thisObj, const List &args)
     else if (args.size() >= 2 && v.isA(ObjectType) && Object::dynamicCast(v).implementsCall()) {
       Value func = args[0];
       int i = args[1].toInt32(exec);
-#if 0
-//  ### TODO
-      List *funcArgs = args.copy();
-      funcArgs->removeFirst(); // all args after 2 go to the function
-      funcArgs->removeFirst();
-#endif
-      int r = (const_cast<Window*>(window))->installTimeout(s, i, true /*single shot*/);
+
+      // All arguments after the second should go to the function
+      // FIXME: could be more efficient
+      List funcArgs = args.copyTail().copyTail();
+
+      int r = (const_cast<Window*>(window))->installTimeout(func, funcArgs, i, true /*single shot*/);
       return Number(r);
     }
     else
@@ -1422,13 +1426,12 @@ Value WindowFunc::tryCall(ExecState *exec, Object &thisObj, const List &args)
 	     Object::dynamicCast(v).implementsCall()) {
       Value func = args[0];
       int i = args[1].toInt32(exec);
-#if 0
-// ### TODO
-      List *funcArgs = args.copy();
-      funcArgs->removeFirst(); // all args after 2 go to the function
-      funcArgs->removeFirst();
-#endif
-      int r = (const_cast<Window*>(window))->installTimeout(s, i, false);
+
+      // All arguments after the second should go to the function
+      // FIXME: could be more efficient
+      List funcArgs = args.copyTail().copyTail();
+
+      int r = (const_cast<Window*>(window))->installTimeout(func, funcArgs, i, false);
       return Number(r);
     }
     else
